overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,3 +74,11 @@ input:focus {
 .selected-tab {
   background-color: #383B59;
 }
+
+.overflowbreak {
+  overflow-wrap: anywhere;
+}
+
+.lead-listing-name::-webkit-scrollbar {
+  display: none;
+}
